frontend_tests/negative/break_placement/go.mod
module example.com/renvotests/negative/break_placement

go 1.25
